--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(54, 54, 54);
-  color: black;
+  background-color: black;
+  color: rgb(255, 255, 255);
   font-family: Verdana;
 }
