--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
-  color: rgb(255, 255, 255);
+  background-color: white;
+  color: white;
   font-family: Verdana;
 }
